[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/reactor_crack1.png" type="Texture" id=1]
[ext_resource path="res://FireEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/reactor_crack2.png" type="Texture" id=3]
[ext_resource path="res://sprites/reactor_crack3.png" type="Texture" id=4]
[ext_resource path="res://sprites/reactor_crack4.png" type="Texture" id=5]
[ext_resource path="res://sprites/reactor_crack5.png" type="Texture" id=6]
[ext_resource path="res://ReactorCrack.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/fire.mp3" type="AudioStream" id=8]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.0683453, 0.223022, 0.996403 )
colors = PoolColorArray( 1, 0.421875, 0.421875, 1, 1, 0.862972, 0.23741, 1, 0.320312, 0.320312, 0.320312, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.109091 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.781818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=9]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( -1, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=14]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( -1, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( -1, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=15]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 1, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=7]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 1, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=6]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=8]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( -1, 0.5, 0 )
spread = 10.0
gravity = Vector3( 0, -150, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 39.92
scale = 50.0
scale_random = 0.43
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[node name="ReactorCrack" type="Node2D"]
script = ExtResource( 7 )

[node name="Variant1" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Variant1"]
texture = ExtResource( 1 )

[node name="FireEffect" parent="Variant1" instance=ExtResource( 2 )]
position = Vector2( 48, 128 )
process_material = SubResource( 9 )

[node name="FireEffect3" parent="Variant1" instance=ExtResource( 2 )]
position = Vector2( 40, 32 )
process_material = SubResource( 14 )

[node name="FireEffect2" parent="Variant1" instance=ExtResource( 2 )]
position = Vector2( 48, -136 )
process_material = SubResource( 5 )

[node name="Variant2" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Variant2"]
texture = ExtResource( 3 )

[node name="FireEffect" parent="Variant2" instance=ExtResource( 2 )]
position = Vector2( 40, 24 )
process_material = SubResource( 15 )

[node name="Variant3" type="Node2D" parent="."]
visible = false

[node name="reactor_crack3" type="Sprite" parent="Variant3"]
texture = ExtResource( 4 )

[node name="FireEffect" parent="Variant3" instance=ExtResource( 2 )]
position = Vector2( 72, -64 )
process_material = SubResource( 5 )

[node name="FireEffect2" parent="Variant3" instance=ExtResource( 2 )]
position = Vector2( 16, 40 )
process_material = SubResource( 5 )

[node name="FireEffect3" parent="Variant3" instance=ExtResource( 2 )]
position = Vector2( -64, 40 )
process_material = SubResource( 5 )

[node name="Variant4" type="Node2D" parent="."]
visible = false

[node name="reactor_crack4" type="Sprite" parent="Variant4"]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )

[node name="FireEffect" parent="Variant4" instance=ExtResource( 2 )]
position = Vector2( 128, -24 )
process_material = SubResource( 7 )

[node name="FireEffect2" parent="Variant4" instance=ExtResource( 2 )]
position = Vector2( -24, 32 )
process_material = SubResource( 6 )

[node name="FireEffect3" parent="Variant4" instance=ExtResource( 2 )]
position = Vector2( -168, -8 )
process_material = SubResource( 8 )

[node name="Variant5" type="Node2D" parent="."]
visible = false

[node name="reactor_crack5" type="Sprite" parent="Variant5"]
position = Vector2( -8, -8 )
texture = ExtResource( 6 )

[node name="FireEffect" parent="Variant5" instance=ExtResource( 2 )]
position = Vector2( 24, -40 )
process_material = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
